admission/admission-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admission
spec:
  type: ClusterIP
  selector:
    app: admission
  ports:
  - name: admission
    protocol: TCP
    port: 443
    targetPort: 8443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission
  template:
    metadata:
      labels:
        app: admission
    spec:
      volumes:
      - name: admission-configmap
        configMap:
          name: admission
          items:
          - key: namespaces.exempt
            path: namespaces.exempt
          - key: images.allowed
            path: images.allowed
          - key: mutate.workloads
            path: mutate.workloads
      - name: admission-secret
        secret:
          secretName: admission
      containers:
      - name: admission
        image: docker.io/steveszabo/admission:v1.0.28
        ports:
        - name: admission
          containerPort: 8443
        volumeMounts:
        - name: admission-configmap
          mountPath: /app/config
          readOnly: true
        - name: admission-secret
          subPath: tls.crt
          mountPath: /app/ssl/admission.base-admission.svc.crt
          readOnly: true
        - name: admission-secret
          subPath: tls.key
          mountPath: /app/ssl/admission.base-admission.svc.key
          readOnly: true
#        livenessProbe:
#          initialDelaySeconds: 5
#          periodSeconds: 5
#          successThreshold: 1
#          failureThreshold: 3
#          httpGet:
#            path: /health
#            port: admission
#            scheme: HTTPS
#        readinessProbe:
#          initialDelaySeconds: 5
#          periodSeconds: 5
#          successThreshold: 1
#          failureThreshold: 3
#          httpGet:
#            path: /health
#            port: admission
#            scheme: HTTPS
