admission/admission-hook-validate.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: admission
webhooks:
- name: admission.cloudserv.ca
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 10
  clientConfig:
    service:
      name: admission
      namespace: base-admission
      path: /validate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTVENDQWpHZ0F3SUJBZ0lVWXZJbzZ2cUJ4by9kMmdZQlBWSUZGOGx4TjRnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05ERVZNQk1HQTFVRUNnd01RMjl0Y0dGdWVTQkpibU11TVJzd0dRWURWUVFEREJKaVlYTmxMV0ZrYldsegpjMmx2Ymk1emRtTXdIaGNOTWpRd056RTFNREF4TURBNVdoY05NalV3TnpFMU1EQXhNREE1V2pBME1SVXdFd1lEClZRUUtEQXhEYjIxd1lXNTVJRWx1WXk0eEd6QVpCZ05WQkFNTUVtSmhjMlV0WVdSdGFYTnphVzl1TG5OMll6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFMbXc0bjd2eC90VEdoZkdLMG0zRGpLeQpIenA2VytmTWIveF [...]
  rules:
  - apiGroups: ["apps"]
    resources: ["deployments"]
    apiVersions: ["*"]
    operations:
    - CREATE
